# HIPRTSDK

./: .gitignore  CMakeLists.txt  README.md
doc/: maca-upstream-review-zh.md
hiprt/: README.md
tutorials/: readme.md
tutorials/00_context_creation/: main.cpp
tutorials/01_geom_intersection/: main.cpp
tutorials/02_scene_intersection/: main.cpp
tutorials/03_custom_intersection/: main.cpp
tutorials/04_compaction/: main.cpp
tutorials/05_global_stack/: main.cpp
tutorials/06_dynamic_stack/: main.cpp
tutorials/07_custom_bvh_import/: main.cpp
tutorials/08_ambient_occlusion/: main.cpp
tutorials/09_motion_blur_srt/: main.cpp
tutorials/10_motion_blur_matrix/: main.cpp
tutorials/11_multi_custom_intersection/: main.cpp
tutorials/12_cutout/: main.cpp
tutorials/13_concurrent_scene_build/: main.cpp
tutorials/14_batch_build/: main.cpp
tutorials/15_multi_level_instancing/: main.cpp
tutorials/16_fluid_simulation/: main.cpp
tutorials/17_hiprt_hip/: main.cpp  premake5.lua
tutorials/18_shadow_ray/: main.cpp
tutorials/19_primary_ray/: main.cpp
tutorials/common/: BasicTutorialKernels.h  BvhBuilder.h  Common.h  CornellTutorialKernels.h  CustomBvhImportTutorialKernels.h  CustomIntersectionTutorialKernels.h  CutoutTutorialKernels.h  FluidTutorialKernels.h  MotionBlurTutorialKernels.h  MultiCustomTutorialKernels.h  SceneBuildTutorialKernels.h  SceneDemo.cpp  SceneDemo.h  TutorialBase.cpp  TutorialBase.h  dependency.lua
